--- a/scss/_config.scss
+++ b/scss/_config.scss
@@ -1,32 +1,29 @@
 $primary-color: #444;
 $seconary-color: #b5ee1a;
 $show-home-image: true;
-$home-image: url(/dist/img/portrait.JPG);
+$home-image: url(/dist/img/keyboard.jpg);
 $background-opacity: 0.8;
 
 @mixin easeOut {
-    transition: all 0.5s ease-out;
-    
+	transition: all 0.5s ease-out;
 }
 @mixin background {
-    @if $show-home-image {
-        &#bg-img{
-            background: $home-image;
-            background-attachment: fixed;
-            background-size: cover;
+	@if $show-home-image {
+		&#bg-img {
+			background: $home-image;
+			background-attachment: fixed;
+			background-size: cover;
 
-            &:after{
-                content:'';
-                position: absolute;
-                top: 0;
-                right: 0;
-                width: 100%;
-                height: 100%;
-                z-index: -1;
-                background: rgba($primary-color, $background-opacity);
-            }
-        }
-        
-    
-    }
+			&:after {
+				content: '';
+				position: absolute;
+				top: 0;
+				right: 0;
+				width: 100%;
+				height: 100%;
+				z-index: -1;
+				background: rgba($primary-color, $background-opacity);
+			}
+		}
+	}
 }
