--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,76 +1,79 @@
 @import 'config';
 @import 'menu';
 
-*{
-    box-sizing: border-box;
+* {
+	box-sizing: border-box;
 }
 
-body{
-    @include background;
-    background: $primary-color;
-    color: white;
-    height: 100%;
-    margin: 0;
-    font-family: 'Courier New', Courier, monospace;
-    line-height: 1.5;
+body {
+	@include background;
+	background: $primary-color;
+	color: white;
+	height: 100%;
+	margin: 0;
+	font-family: 'Courier New', Courier, monospace;
+	line-height: 1.5;
 }
 
 //Headings
 
-h1, h2, h3{
-    margin: 0;
-    font-weight: 400;
-    
-    &.lg-heading{
-        font-size: 6rem;
-    }
+h1,
+h2,
+h3 {
+	margin: 0;
+	font-weight: 400;
 
-    &.sm-heading{
-        margin-bottom: 2rem;
-        padding: 0.2rem 1 rem;
-        background: rgba(lighten($primary-color, 2),0.5);
+	&.lg-heading {
+		font-size: 6rem;
+	}
 
-    }
-
+	&.sm-heading {
+		margin-bottom: 2rem;
+		padding: 0.2rem 1 rem;
+		background: rgba(lighten($primary-color, 2), 0.5);
+	}
 }
 
 //links
 
-a{
-    color: #fff;
-    text-decoration: none;
+a {
+	color: rgb(255, 255, 255);
+	text-decoration: none;
 }
-header{
-    position: fixed;
-    z-index: 2;
-    width: 100%;
+header {
+	position: fixed;
+	z-index: 2;
+	width: 100%;
 }
-.text-secondary{
-    color: $seconary-color;
+.text-secondary {
+	color: $seconary-color;
+	font-size: 80px;
+}
+.mwonge {
+	color: indigo;
 }
 
-main{
-    padding: 4rem;
-    height: 100%;
+main {
+	padding: 4rem;
+	height: 100%;
 
-    .icons{
-        margin-top: 1rem;
+	.icons {
+		margin-top: 1rem;
+		text-align: center;
+		a {
+			padding: 0.4rem;
 
-        a{
-            padding: 0.4rem;
+			&:hover {
+				color: blue;
+				@include easeOut();
+			}
+		}
+	}
 
-            &:hover{
-                color: $seconary-color;
-                @include easeOut();
-            }
-        }
-        
-    }
-
-    &#home{
-        overflow: hidden;
-        h1{
-            margin-top: 20vh;
-        }
-    }
+	&#home {
+		overflow: hidden;
+		h1 {
+			margin-top: 20vh;
+		}
+	}
 }
