--- a/scss/_config.scss
+++ b/scss/_config.scss
@@ -27,3 +27,28 @@ $background-opacity: 0.8;
 		}
 	}
 }
+
+//@media for responsiviness
+@mixin mediaSm {
+	@media screen and (max-width: 500px) {
+		@content;
+	}
+}
+
+@mixin mediaMd {
+	@media screen and (max-width: 780px) {
+		@content;
+	}
+}
+
+@mixin mediaLg {
+	@media screen and (min-width: 781px) and (max-width: 1170px) {
+		@content;
+	}
+}
+
+@mixin mediaXl {
+	@media screen and (min-width: 1171px) {
+		@content;
+	}
+}
