--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,6 +1,5 @@
 @import 'config';
 @import 'menu';
-@import 'mobile';
 
 * {
 	box-sizing: border-box;
@@ -9,7 +8,7 @@
 body {
 	@include background;
 	background: $primary-color;
-	color: white;
+	color: set-text-color($primary-color);
 	height: 100%;
 	margin: 0;
 	font-family: 'Courier New', Courier, monospace;
@@ -56,7 +55,7 @@ header {
 
 main {
 	padding: 4rem;
-	height: 100%;
+	min-height: calc(100vh-60px);
 
 	.icons {
 		margin-top: 1rem;
@@ -78,3 +77,53 @@ main {
 		}
 	}
 }
+
+//About page
+.about-info {
+	display: grid;
+	grid-gap: 40px;
+	grid-template-areas: 'bioimage bio biography' 'job1 job2 job3';
+	grid-template-columns: 1fr 1fr 1fr;
+}
+
+.bio-image {
+	grid-area: bioimage;
+	margin: auto;
+	border-radius: 50%;
+	border: $seconary-color 3px solid;
+}
+
+.biography {
+	grid-area: biography;
+	font-size: 1.5rem;
+}
+
+.job-1 {
+	grid-area: job1;
+}
+
+.job-2 {
+	grid-area: job2;
+}
+
+.job-3 {
+	grid-area: job3;
+}
+.job {
+	background: light rgb(56, 36, 36);
+	padding: 0.5rem;
+	border-bottom: $seconary-color 5px solid;
+}
+
+.bio-header {
+	color: yellowgreen;
+}
+
+.main-footer {
+	text-align: center;
+	padding: rem;
+	background: rgb(8, 24, 24);
+	color: set-text-color($primary-color);
+	height: 60px;
+}
+@import 'mobile';
