--- a/scss/main.scss
+++ b/scss/main.scss
@@ -50,7 +50,7 @@ header {
 	font-size: 80px;
 }
 .mwonge {
-	color: indigo;
+	color: rgb(211, 176, 236);
 }
 
 main {
@@ -119,6 +119,47 @@ main {
 	color: yellowgreen;
 }
 
+//Projects//
+
+.project {
+	display: grid;
+	grid-gap: 30px;
+	grid-template-columns: repeat(3, 1fr);
+
+	img {
+		width: 100%;
+		border: 3px white solid;
+
+		&:hover {
+			opacity: 0.5;
+			border-color: $seconary-color;
+			@include easeOut;
+		}
+	}
+}
+
+.btn {
+	display: block;
+	padding: 0.5rem 1rem;
+	border: 0;
+	margin-bottom: 0.3rem;
+
+	&:hover {
+		background: $seconary-color;
+		color: set-text-color ($seconary-color);
+	}
+}
+.btn-light {
+	@extend .btn;
+	background: gray;
+	color: white;
+}
+.btn-dark {
+	@extend .btn;
+	background: rgb(34, 29, 29);
+	color: white;
+}
+
 .main-footer {
 	text-align: center;
 	padding: rem;
@@ -126,4 +167,5 @@ main {
 	color: set-text-color($primary-color);
 	height: 60px;
 }
+
 @import 'mobile';
