--- a/scss/_mobile.scss
+++ b/scss/_mobile.scss
@@ -1,9 +1,15 @@
 //Extra Large screens
 @include mediaXl {
+	.project {
+		grid-template-columns: repeat(4, 1fr);
+	}
 }
 
 //Medium Large Screens
 @include mediaLg {
+	.project {
+		grid-template-columns: repeat(3, 1fr);
+	}
 }
 
 //Medium Screens
@@ -50,11 +56,17 @@
 
 		grid-template-columns: 1fr;
 	}
+	.project {
+		grid-template-columns: repeat(2, 1fr);
+	}
 }
 
 //For Small Screens/smartphones
 @include mediaSm {
 	main#home h1 {
 		margin-top: 10vh;
+	}
+	.project {
+		grid-template-columns: repeat(1, 1fr);
 	}
 }
