--- a/scss/_config.scss
+++ b/scss/_config.scss
@@ -3,6 +3,7 @@ $seconary-color: #b5ee1a;
 $show-home-image: true;
 $home-image: url(/dist/img/keyboard.jpg);
 $background-opacity: 0.8;
+$my-color: #ffc400;
 
 @mixin easeOut {
 	transition: all 0.5s ease-out;
