--- a/scss/main.scss
+++ b/scss/main.scss
@@ -97,7 +97,6 @@ main {
 	grid-area: biography;
 	font-size: 1.5rem;
 }
-
 .job-1 {
 	grid-area: job1;
 }
@@ -137,7 +136,7 @@ main {
 		}
 	}
 }
-
+//project buttons
 .btn {
 	display: block;
 	padding: 0.5rem 1rem;
@@ -159,6 +158,39 @@ main {
 	background: rgb(34, 29, 29);
 	color: white;
 }
+
+//contacts///////////
+.text-contact {
+	color: $my-color;
+}
+
+.boxes {
+	display: flex;
+	flex-wrap: wrap;
+	justify-content: space-evenly;
+	align-items: center;
+	margin-top: 1rem;
+
+	div {
+		font-size: 1.5rem;
+		border: 5px white solid;
+		padding: 1rem 1rem;
+		margin-bottom: 1rem;
+		@include easeOut;
+
+		&:hover {
+			padding: 0.5rem 1rem;
+			background: $my-color;
+			color: set-text-color($my-color);
+
+			span {
+				color: set-text-color($my-color);
+			}
+		}
+	}
+}
+
+//footer//
 
 .main-footer {
 	text-align: center;
