--- a/scss/_menu.scss
+++ b/scss/_menu.scss
@@ -66,7 +66,8 @@
 	&-nav {
 		margin: 0;
 		padding: 0;
-		background: rgb(31, 9, 6);
+		opacity: 0.96;
+		background: linear-gradient(to left, rgb(31, 32, 31), rgb(61, 60, 60));
 		list-style: none;
 		transform: translate3d(-50%, 100%, 0);
 		@include easeOut;
@@ -78,7 +79,8 @@
 
 	//the branding side
 	&-branding {
-		background: #02021de7;
+		background: linear-gradient(to right, rgb(31, 32, 31), rgb(61, 60, 60));
+		opacity: 0.9;
 		transform: translate3d(50%, -100%, 0);
 		@include easeOut;
 
@@ -87,9 +89,10 @@
 		}
 
 		.portrait {
-			width: 250px;
-			height: 250px;
-			background-image: url('../dist/img/portrait.JPG');
+			width: 300px;
+			height: 300px;
+			background-image: url('/dist/img/dennis_opt.jpg');
+			border-radius: 50%;
 			border: solid 3px greenyellow;
 		}
 	}
